syntax = "proto3";

package zitadel.session.v2alpha;

import "google/api/field_behavior.proto";
import "google/protobuf/struct.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "validate/validate.proto";

option go_package = "github.com/zitadel/zitadel/pkg/grpc/session/v2alpha;session";

enum UserInteraction {
  USER_INTERACTION_UNSPECIFIED = 0;
  USER_INTERACTION_REQUIRED = 1;
  USER_INTERACTION_PREFERRED = 2;
  USER_INTERACTION_DISCOURAGED = 3;
}

message RequestChallenges {
  message WebAuthN {
    string domain = 1 [
      (validate.rules).string = {min_len: 1, max_len: 200},
      (google.api.field_behavior) = REQUIRED,
      (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
        description: "\"Domain on which the session was created. Will be used in the WebAuthN challenge.\"";
      }
    ];
    UserInteraction user_interacion = 2 [
      (validate.rules).enum = {
        defined_only: true,
        not_in: [0]
      },
      (google.api.field_behavior) = REQUIRED,
      (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
        description: "\"User interaction that is required during validation. When set to `USER_INTERACTION_REQUIRED` the behaviour is for passkey authentication. Other values will mean U2F\"";
        ref: "https://www.w3.org/TR/webauthn/#enum-userVerificationRequirement";
      }
    ];
  }

  optional WebAuthN web_auth_n = 1;
}

message Challenges {
  message WebAuthN {
    google.protobuf.Struct public_key_credential_request_options = 1 [
      (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
        description: "Options for Assertion Generaration (dictionary PublicKeyCredentialRequestOptions). Generated helper methods transform the field to JSON, for use in a WebauthN client. See also: https://www.w3.org/TR/webauthn/#dictdef-publickeycredentialrequestoptions"
        example: "{\"publicKey\":{\"allowCredentials\":[{\"id\":\"ATmqBg-99qyOZk2zloPdJQyS2R7IkFT7v9Hoos_B_nM\",\"type\":\"public-key\"}],\"challenge\":\"GAOHYz2jE69kJMYo6Laij8yWw9-dKKgbViNhfuy0StA\",\"rpId\":\"localhost\",\"timeout\":300000,\"userVerification\":\"required\"}}"
      }
    ];
  }

  optional WebAuthN web_auth_n = 1;
}
